# procurement-rag-engine

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
data/sample_docs/: bid_construction.txt  policy_procurement_guidelines.txt  rfp_it_services.txt
scripts/: ingest_sample_docs.py  run_eval.py
src/api/: app.py  config.py
src/evaluation/: __init__.py  evaluator.py
src/ingestion/: __init__.py  chunker.py  loader.py  pipeline.py
src/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  openai_provider.py  openrouter_provider.py
src/rag/: __init__.py  engine.py
src/vectorstore/: __init__.py  chroma_store.py  store.py
static/: index.html
tests/: test_chunker.py  test_llm_factory.py  test_loader.py
